[gd_scene load_steps=2 format=3 uid="uid://djiaiay3ntvfy"]

[ext_resource type="Script" path="res://addons/diisis/editor/src/dropdowns_container.gd" id="1_6xnc2"]

[node name="MarginContainer" type="MarginContainer"]
auto_translate_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6xnc2")

[node name="TabContainer" type="TabContainer" parent="."]
auto_translate_mode = 1
layout_mode = 2
current_tab = 0

[node name="Dropdowns" type="VBoxContainer" parent="TabContainer"]
auto_translate_mode = 1
layout_mode = 2
metadata/_tab_index = 0

[node name="Controls" type="VBoxContainer" parent="TabContainer/Dropdowns"]
auto_translate_mode = 1
layout_mode = 2
size_flags_vertical = 0

[node name="SearchContainer" type="HBoxContainer" parent="TabContainer/Dropdowns/Controls"]
auto_translate_mode = 1
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Dropdowns/Controls/SearchContainer"]
auto_translate_mode = 1
layout_mode = 2
text = "Search:"

[node name="SearchLineEdit" type="LineEdit" parent="TabContainer/Dropdowns/Controls/SearchContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "t: for titles, o: for options. other queries search both"

[node name="ClearSearchButton" type="Button" parent="TabContainer/Dropdowns/Controls/SearchContainer"]
auto_translate_mode = 1
layout_mode = 2
text = "Clear Search"

[node name="CreateDDContainer" type="HBoxContainer" parent="TabContainer/Dropdowns/Controls"]
auto_translate_mode = 1
layout_mode = 2

[node name="CreateDDNameTextEdit" type="LineEdit" parent="TabContainer/Dropdowns/Controls/CreateDDContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 3

[node name="AddButton" type="Button" parent="TabContainer/Dropdowns/Controls/CreateDDContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 0
focus_mode = 0
text = "add dd"

[node name="DropdownsContainer" type="VBoxContainer" parent="TabContainer/Dropdowns"]
auto_translate_mode = 1
layout_mode = 2

[node name="DialogSyntax" type="VBoxContainer" parent="TabContainer"]
auto_translate_mode = 1
visible = false
layout_mode = 2
metadata/_tab_index = 1

[connection signal="text_changed" from="TabContainer/Dropdowns/Controls/SearchContainer/SearchLineEdit" to="." method="_on_search_line_edit_text_changed"]
[connection signal="pressed" from="TabContainer/Dropdowns/Controls/SearchContainer/ClearSearchButton" to="." method="_on_clear_search_button_pressed"]
[connection signal="text_changed" from="TabContainer/Dropdowns/Controls/CreateDDContainer/CreateDDNameTextEdit" to="." method="_on_create_dd_name_text_edit_text_changed"]
[connection signal="text_submitted" from="TabContainer/Dropdowns/Controls/CreateDDContainer/CreateDDNameTextEdit" to="." method="create_new_dropdown"]
[connection signal="pressed" from="TabContainer/Dropdowns/Controls/CreateDDContainer/AddButton" to="." method="create_new_dropdown"]
[connection signal="resized" from="TabContainer/Dropdowns/DropdownsContainer" to="." method="_on_dropdowns_container_resized"]
[connection signal="visibility_changed" from="TabContainer/DialogSyntax" to="." method="_on_dialog_syntax_visibility_changed"]
